--- a/dynamic_page_with_EJS/views/about.ejs
+++ b/dynamic_page_with_EJS/views/about.ejs
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
 </head>
+
 <body>
-    
+    <p>Welcome <%= user.name%>
+    </p>
+    <p>Your Email: <%= user.email%>
+    </p>
+    <p>Your Profession: <%= user.profession%>
+    </p>
+    <p>Your Skills:-
+    <ul>
+        <% user.skills.forEach((item)=> { %>
+            <li>
+                <%= item%>
+            </li>
+            <% }) %>
+    </ul>
+    </p>
 </body>
+
 </html>
