--- a/todo_app_using_ejs/views/list.ejs
+++ b/todo_app_using_ejs/views/list.ejs
@@ -19,6 +19,8 @@
         <li>Learn Express</li>
         <li>Learn mySQL</li>
         <li>Learn typescript</li>
+        <% for(int i=0; i < items.length(); i++) %>
+            <% { %>
     </ul>
     <form action="/" method="post">
         <input type="text" name="newItem" id="newItem">
