--- a/todo_app_using_ejs/views/list.ejs
+++ b/todo_app_using_ejs/views/list.ejs
@@ -49,7 +49,7 @@
         <form action="/" method="post">
             <input type="text" name="newItem" id="newItem" placeholder="new item">
             <br>
-            <input type="submit" class="block uppercase mx-auto shadow bg-indigo-800 hover:bg-indigo-700 focus:shadow-outline focus:outline-none text-white text-xs py-3 px-10 rounded mt-2 cursor-pointer" value="add item">
+            <input type="submit" class="block uppercase mx-auto shadow bg-indigo-800 hover:bg-indigo-700 focus:shadow-outline focus:outline-none text-white text-xs py-3 px-10 rounded mt-2 cursor-pointer submit_btn" value="add item">
         </form>
     </div>
     <script src="javascript/script.js"></script>
