--- a/todo_app_using_ejs/views/list.ejs
+++ b/todo_app_using_ejs/views/list.ejs
@@ -38,10 +38,10 @@
             <% for(let i=0; i < listItems.length; i++) {%>
                 <li>
                     <div class="box">
-                        <% if(listItems[i] !== ""){ %>
-                        <input type="checkbox" class="mycheckbox">
-                        <%= listItems[i] %>
-                          <%  } %>
+                        <% if(listItems[i] !=="" ){ %>
+                            <input type="checkbox" class="mycheckbox">
+                            <%= listItems[i] %>
+                                <% } %>
                     </div>
                 </li>
                 <% } %>
@@ -49,7 +49,9 @@
         <form action="/" method="post">
             <input type="text" name="newItem" id="newItem" placeholder="new item">
             <br>
-            <input type="submit" class="block uppercase mx-auto shadow bg-indigo-800 hover:bg-indigo-700 focus:shadow-outline focus:outline-none text-white text-xs py-3 px-10 rounded mt-2 cursor-pointer submit_btn" value="add item">
+            <input type="submit"
+                class="block uppercase mx-auto shadow bg-indigo-800 hover:bg-indigo-700 focus:shadow-outline focus:outline-none text-white text-xs py-3 px-10 rounded mt-2 cursor-pointer submit_btn"
+                value="add item">
         </form>
     </div>
     <script src="javascript/script.js"></script>
