--- a/blogging_app/views/home.ejs
+++ b/blogging_app/views/home.ejs
@@ -1,10 +1,11 @@
-<h1>Home Page</h1>
-<p>
-    <%= home %>
-</p>
-<p>
-    <%= about %>
-</p>
-<p>
-    <%= content %>
-</p>
+<%- include('header.ejs') %>
+    <p>
+        <%= home %>
+    </p>
+    <p>
+        <%= about %>
+    </p>
+    <p>
+        <%= content %>
+    </p>
+    <%- include('footer.ejs') %>
