--- a/blogging_app/views/home.ejs
+++ b/blogging_app/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include('header.ejs') %>
+<%- include('partials/header.ejs') %>
     <p>
         <%= home %>
     </p>
@@ -8,4 +8,4 @@
     <p>
         <%= content %>
     </p>
-    <%- include('footer.ejs') %>
+    <%- include('partials/footer.ejs') %>
