--- a/blogging_app/views/home.ejs
+++ b/blogging_app/views/home.ejs
@@ -1,11 +1,6 @@
 <%- include('partials/header.ejs') %>
+    <h1>Home</h1>
     <p>
         <%= home %>
-    </p>
-    <p>
-        <%= about %>
-    </p>
-    <p>
-        <%= content %>
     </p>
     <%- include('partials/footer.ejs') %>
