--- a/blogging_app/views/partials/footer.ejs
+++ b/blogging_app/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </div>
 <div class="footer-padding"></div>
 <div class="footer">
-  <p>AstroDeveloper &copy; 2023</p>
+  <p>&copy; AstroDeveloper 2023</p>
 </div>
 </div>
 </body>
