--- a/blogging_app/views/compose.ejs
+++ b/blogging_app/views/compose.ejs
@@ -7,7 +7,7 @@
         <br>
         <label for="post">Post</label>
         <br>
-        <input type="text" name="$post" id="post">
+        <textarea name="$post" id="post" cols="30" rows="10"></textarea>
         <br>
         <input type="submit" value="Publish">
     </form>
