--- a/blogging_app/views/home.ejs
+++ b/blogging_app/views/home.ejs
@@ -3,4 +3,10 @@
     <p>
         <%= home %>
     </p>
+
+    <% for(let i = 0; i < blogs.length; i++){ %>
+        <h1> <%= blogs[i].title %> </h1>
+        <p> <%= blogs[i].post %> </p>
+    <% } %>
+
     <%- include('partials/footer.ejs') %>
